Aura & Material - Rating | fix alignment

--- a/theme-base/components/input/_rating.scss
+++ b/theme-base/components/input/_rating.scss
@@ -6,6 +6,9 @@
     .p-rating-item {
         border-radius: 50%;
         outline-color: transparent;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
 
         .p-rating-icon {
             color: $ratingStarIconOffColor;
