--- a/themes/material/extensions/_rating.scss
+++ b/themes/material/extensions/_rating.scss
@@ -5,6 +5,8 @@
         border-radius: 50%;
         width: 2rem;
         height: 2rem;
+        align-items: center;
+        display: inline-flex;
         justify-content: center;
 
         &.p-focus {
